--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,8 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -19,8 +17,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/textview"
         android:textColor="#FFF"
-        android:textSize="20dp"
-        android:layout_gravity="left"/>
+        android:textSize="20dp"/>
 
     <GridView
         android:id="@+id/gridview"
