--- a/app/src/main/res/anim/left_rotate.xml
+++ b/app/src/main/res/anim/left_rotate.xml
@@ -5,6 +5,5 @@
         android:fromDegrees="0.0"
         android:toDegrees="-90.0"
         android:pivotX="50%"
-        android:pivotY="50%"
-        android:duration="2250"/>
+        android:pivotY="50%"/>
 </set>
